syntax = "proto3";

package mnemosynerpc;

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";
import "github.com/golang/protobuf/ptypes/empty/empty.proto";

service SessionManager {
    rpc Context(google.protobuf.Empty) returns (ContextResponse) {};
    rpc Get(GetRequest) returns (GetResponse) {};
    rpc List(ListRequest) returns (ListResponse) {};
    rpc Exists(ExistsRequest) returns (ExistsResponse) {};
    rpc Start(StartRequest) returns (StartResponse) {};
    rpc Abandon(AbandonRequest) returns (AbandonResponse) {};
    rpc SetValue(SetValueRequest) returns (SetValueResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
}

message Session {
    string access_token = 1;
    string subject_id = 2;
    string subject_client = 3;
    map<string, string> bag = 4;
    google.protobuf.Timestamp expire_at = 5;
    string refresh_token = 6;
}

message GetRequest {
    string access_token = 1;
}

message GetResponse {
    Session session = 1;
}

message ContextResponse {
	Session session = 1;
}

message ListRequest {
    int64 offset = 1;
    int64 limit = 2;
    google.protobuf.Timestamp expire_at_from = 3;
    google.protobuf.Timestamp expire_at_to = 4;
    string refresh_token = 5;
}

message ListResponse {
    repeated Session sessions = 1;
}

message ExistsRequest {
    string access_token = 1;
}
message ExistsResponse {
    bool exists = 1;
}

message StartRequest {
    Session session = 1;
}

message StartResponse {
    Session session = 1;
}

message AbandonRequest {
    string access_token = 1;
}

message AbandonResponse {
    bool abandoned = 1;
}

message SetValueRequest {
    string access_token = 1;
    string key = 2;
    string value = 3;
}

message SetValueResponse {
    map<string, string> bag = 1;
}

message DeleteRequest {
    string access_token = 1;
    google.protobuf.Timestamp expire_at_from = 2;
    google.protobuf.Timestamp expire_at_to = 3;
    string refresh_token = 4;
    string subject_id = 5;
}
message DeleteResponse {
    int64 count = 1;
}
